# dpp_projekt_2026

./: 010224_010223_Ferrero.csv  280122_010221_Mondelez.csv  300126_030225_Ferrero.csv  310125_020224_Ferrero.csv  310125_020224_Mondelez.csv  310125_251124_LindtSpruengli.csv  A1017_monprod_timeseries_docu  Presentation.pptx  README.md  pyproject.toml
data/: 0118ff_waegung_vpi_suesswaren_schoko_kaffee.csv
data/processed/: shareprice_monthly.csv
data/raw/: 010224_010224_Mondelez.csv  01183ff_vpi_suesswaren_schoko_kaffee.csv  1082_1083_einfuhrpreise_suesswarenundkaffee.csv  (+14 more)
docs/: 1082_monatsbericht_suesswaren_timeseries_docu  ideas_for_price_elasticity_prediction  model_ideas_time_series.txt
notebooks/: 00A_Collection_of_functions.ipynb  00A_preparing_1082.ipynb  00A_preparing_1082_1083.ipynb  00A_preparing_monatsberichte.ipynb  01_data_uk_supermarkets.ipynb  01_exploration.ipynb  01_preprocessing_monthly_data.ipynb  02_shareprice_daily_to_monthly.ipynb  03_Combination_of_data.ipynb  03_combining_all_data.ipynb  042_preprocessing.ipynb  04_exploration.ipynb  05_first_prediction.ipynb  05_generating_overall_timeseries.ipynb  05_preprocessing.ipynb  06_first_prediction.ipynb  06_prediction_with_monthly_new_data.ipynb  07_estimation_price_elasticity.ipynb  08_ARIMAX_parameter_selection.ipynb  08_Judiths_models_1.ipynb  08_estimation_price_elasticity.ipynb  08_prediction_monthly_updated.ipynb  09_models_shareprices_stepwise.ipynb  10_ARIMAX_monthly_updated_prediction.ipynb  11_ARIMAX_monthly_updated_prediction.ipynb  12_XGBoost.ipynb  13_XGBoost_for_Presentation.ipynb
(+2 files in other folders)
