[project]
name = "chocolate_project"
version = "0.1.0"
description = "Model the price elasticity of chocolate products in Germany"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "duckdb>=1.4.1",
    "scikit-learn>=1.7.2",
    "ipywidgets>=8.1.8",
    "plotly>=6.5.2",
    "statsmodels>=0.14.6",
    "imblearn>=0.0",
    "xgboost>=3.2.0",
    "tensorflow>=2.20.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"
